[package]
name = "lrdf"
version = "0.2.0"
authors = ["Andreas Hauser <Andreas.Hauser@LMU.de>"]
edition = "2021"
license = "EUPL-1.2"
keywords = ["dataframe", "nanopore", "FastQ", "TSV", "commandline"]
repository = "https://github.com/ahcm/lrdf"
description = "Commandline tool to generate a dataframe from Oxford Nanopore FastQ"

[lib]
name = "lrdf"
crate-type = ["cdylib","lib"]

[[bin]]
name = "lrdf"

[dependencies]
chrono = "0.4.23"
fastx = "0.2.0"
permutation = "0.4.1"
structopt = "0.3.26"

[workspace]
members = [ "lrdfpy" ]
